# molecule-weight

./: .gitignore  Gemfile  LICENSE.txt  README.md  amino_acids.rb  main.hs  main.rb  test.rb  web.rb
haskell/: aa  aa.hi  aa.hs  peptide.cabal
haskell/src/: Main.hs  Peptide.hs  test.hs
public/: normalize.css  script.js  style.css
views/: index.erb  layout.erb
